backstage/backstage.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: backstage
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
  namespace: backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backstage
  template:
    metadata:
      labels:
        app: backstage
    spec:
      containers:
        - name: backstage
          image: roadiehq/community-backstage-image:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 7007
