backstage/backstage-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backstage-dashboard
  namespace: backstage
  labels:
    app: backstage
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: le-prod
spec:
  ingressClassName: public
  tls:
    - hosts:
        - bs.nucleos.net.pl
      secretName: certificate-prod-backstage2
  rules:
    - host: bs.nucleos.net.pl
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: backstage
                port:
                  number: 80
